[metadata]
name = gitrack
summary = Zero touch time tracking using Git
description-file = README.md
description-content-type = text/markdown
author = Adam Uhlir
author-email = hello@adam-uhlir.me
license = MIT
home-page = https://github.com/AuHau/giTrack
python_requires = >=3.5.0, =<3.7.*
classifier =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 4 - Beta
    Topic :: Office/Business :: Scheduling
    Intended Audience :: End Users/Desktop
    Intended Audience :: Developers

[files]
packages =
    gitrack

[entry_points]
console_scripts =
    gitrack = gitrack.main:main

[bdist_wheel]
universal = 1
